Fix and zazzify those auction solution collapses.

--- a/assets/css/components/_auction-solution.scss
+++ b/assets/css/components/_auction-solution.scss
@@ -14,7 +14,7 @@
 
 .auction-solution { // Each line containing an auction solution.
   margin-top: 1rem;
-  margin-bottom: 0.5rem !important;
+  margin-bottom: -0.5rem;
   padding: 0.5rem 1rem !important;
 
   .auction-solution__header {
@@ -39,12 +39,42 @@
     margin-left: auto;
   }
   .auction-solution__confirmation {
+    margin-top: 0 !important;
+    padding-top: 0 !important;
+    animation: confirm-open 0.75s ease;
+    overflow: hidden;
+
     &> .field.is-expanded {
       flex-direction: row;
 
       &> .control {
         width: auto;
       }
+    }
+  }
+  .auction-solution__confirmation.clear { // Transition for the cancellation of bid acceptance.
+    max-height: 0;
+    animation: confirm-close 0.75s cubic-bezier(0, 1, 0, 1);
+  }
+
+  @keyframes confirm-open {
+    from {
+      max-height: 0;
+    }
+    to {
+      max-height: 1000px;
+    }
+  }
+
+  @keyframes confirm-close {
+    from {
+      max-height: 1000px;
+      padding-bottom: 1rem;
+    }
+    to {
+      max-height: 0;
+
+      padding-bottom: 0;
     }
   }
 
@@ -71,11 +101,20 @@
 
 .auction-solution {
   overflow: hidden;
-  max-height: 42px;
+  // max-height: 42px;
   transition: max-height 0.75s cubic-bezier(0, 1, 0, 1);
 
+  .auction-solution__body {
+    overflow: hidden;
+    margin: 0 -1rem 0.5rem -1rem;
+    padding: 0 1rem;
+
+    &:last-child {
+      margin-bottom: 0rem;
+    }
+  }
+
   &--open {
-    max-height: 1000px;
     transition: max-height 0.75s ease-in;
 
     &> .auction-solution__body {
@@ -85,7 +124,7 @@
   }
 
   &--closed {
-    max-height: 42px;
+    margin-bottom: 0.5rem;
 
     &> .auction-solution__body {
       transition: max-height 0.75s cubic-bezier(0, 1, 0, 1);
